--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-TileColor" content="#0e1212" />
     <meta
       name="description"
-      content="Creative frontend developer"
+      content="Simplistic Sophistication"
     />
     <meta name="subject" content="Portfolio" />
     <!--bots-->
@@ -31,7 +31,7 @@
     <meta property="og:image:height" content="1080px" />
     <meta
       property="og:description"
-      content="Creative frontend developer"
+      content="Simplistic Sophistication"
     />
     <meta property="og:site_name" content="iuri.is" />
     <meta property="og:locale" content="en_US" />
@@ -43,7 +43,7 @@
     <meta name="twitter:title" content="iuri.is" />
     <meta
       name="twitter:description"
-      content="Creative frontend developer"
+      content="Simplistic Sophistication"
     />
     <meta name="twitter:image" content="<%= BASE_URL %>img/iuri.is-share.png" />
 
@@ -81,7 +81,7 @@
   </head>
   <body>
     <noscript>
-      <h1>Iuri de Paula - Creative frontend developer</h1>
+      <h1>Soluhunt - Simplistic Sophistication</h1>
 
       <ul>
         <li>
